<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/layout_barcode_connect_barcode_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:zxing_preview_scaling_strategy="centerCrop"
        app:zxing_scanner_layout="@layout/external_layout_barcode_scanner" />

    <ImageView
        android:id="@+id/layout_barcode_connect_mode_text_indicator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:background="?rippleBackground"
        app:srcCompat="@drawable/ic_short_text_white_24dp" />

    <RelativeLayout
        android:id="@+id/container_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/task_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/task_help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_progress_bar"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/mesg_completing"
            android:textColor="?colorSecondary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/task_interrupter_button"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_help_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/butn_cancel" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout_barcode_connect_conduct_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    android:id="@+id/camera_permission">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/colorSecondary"
                        app:srcCompat="@drawable/ic_camera_white_144dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        style="@style/TextAppearance.Primary.Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="105dp"
                        android:padding="15dp"
                        android:text="@string/text_cameraPermissionRequired"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="105dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="?borderlessButtonStyle"
                        android:id="@+id/_btn_camera_permission"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/butn_ask"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/network_permission"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/colorSecondary"
                        app:srcCompat="@drawable/ic_network"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        style="@style/TextAppearance.Primary.Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="105dp"
                        android:padding="15dp"
                        android:text="@string/mesg_turnNetworkOff"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="105dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="?borderlessButtonStyle"
                        android:id="@+id/_btn_network_permission"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="OFF"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
            </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/location_permission"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/colorSecondary"
                        app:srcCompat="@drawable/ic_perm_device_information_white_144dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        style="@style/TextAppearance.Primary.Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="105dp"
                        android:padding="15dp"
                        android:text="@string/mesg_locationPermissionRequiredAny"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="105dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="?borderlessButtonStyle"
                        android:id="@+id/_btn_location_permission"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/butn_enable"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/wifi_permission"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/colorSecondary"
                        app:srcCompat="@drawable/ic_signal_wifi_off_white_144dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        style="@style/TextAppearance.Primary.Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="105dp"
                        android:padding="15dp"
                        android:text="@string/text_scanQRWifiRequired"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="105dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="?borderlessButtonStyle"
                        android:id="@+id/_btn_wifi_permission"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/butn_enable"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>