<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bhuvan_kumar.Presto.fragment.ProfileSettingsFragment">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_image_layout">
        <LinearLayout
            android:id="@+id/header_default_device_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="vertical">
            <include layout="@layout/include_layout_profile_picture" />

            <TextView
                android:id="@+id/header_default_device_name_text"
                style="@style/TextAppearance.Primary.Big.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/text_unknown" />

            <TextView
                android:id="@+id/header_default_device_version_text"
                style="@style/TextAppearance.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_layout"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/trusted_devices">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_devices_white_24dp"
                    android:tint="@color/colorSecondary"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    style="@style/TextAppearance.Primary.Big.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text_trustedDevices" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/preferences"
                android:layout_marginTop="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_settings_white_24dp"
                    android:tint="@color/colorSecondary"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    style="@style/TextAppearance.Primary.Big.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text_preferences"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/share_app"
                android:layout_marginTop="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_share_white_24dp"
                    android:tint="@color/colorSecondary"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    style="@style/TextAppearance.Primary.Big.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/butn_share"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/contact_us"
                    android:layout_marginTop="25dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/heart"
                        android:tint="@color/colorSecondary"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"/>
                    <TextView
                        style="@style/TextAppearance.Primary.Big.SingleLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/butn_contact"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/clear_preferences"
                android:layout_marginTop="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_delete_white_24dp"
                    android:tint="@color/colorSecondary"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    style="@style/TextAppearance.Primary.Big.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/butn_resetToDefault"/>
            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
            <com.facebook.ads.NativeAdLayout
                android:id="@+id/fb_native_ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:id="@+id/fl_adplaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
